# monet-tracker-api

./: .commitlintrc.js  .dockerignore  .env.example  .gitignore  .gitmessage  .golangci.yml  .releaserc.json  BUILD.bazel  CHANGELOG.md  Dockerfile  MODULE.bazel  Makefile  buf.gen.yaml  buf.yaml  bun.lockb  docker-compose.yml  go.mod  go.sum  package.json
.github/workflows/: ci.yml
.husky/: commit-msg  pre-commit
gateway/: Dockerfile  main.go
migration/: BUILD.bazel  main.go
protobuf/: BUILD.bazel  common.proto  empty.proto  user.proto
protobuf/user/v1/: user.proto
services/auth/: .air.toml  BUILD.bazel  Dockerfile  main.go
services/auth/cmd/: main.go
services/auth/cmd/auth/: main.go
services/auth/delivery/http/: BUILD.bazel  auth_handler.go  oauth_google_handler.go
services/auth/docs/: docs.go  swagger.json  swagger.yaml
services/auth/handler/: BUILD.bazel  http.go  http_handler.go  oauth_google_handler.go
services/auth/internal/: BUILD.bazel  payload.go  repository.go  usecase.go
services/auth/internal/controller/: http.go
services/auth/internal/delivery/http/: BUILD.bazel  auth_handler.go  oauth_google_handler.go
services/auth/internal/delivery/http/middleware/: BUILD.bazel  auth_middleware.go
services/auth/internal/oauth/google/usecase/: usecase.go
services/auth/internal/repository/: BUILD.bazel  auth_repository.go  external_auth_repository.go  session_repository.go
services/auth/internal/usecase/: BUILD.bazel  auth_usecase.go  oauth_google_usecase.go  usecase.go
services/auth/model/: BUILD.bazel  model.go
services/auth/repository/: BUILD.bazel  auth_repository.go  repository.go
services/auth/server/: BUILD.bazel  http.go  http_server.go
services/auth/service/: BUILD.bazel  oauth_google_service.go  service.go
services/auth/usecase/: BUILD.bazel  auth_usecase.go  oauth_google_usecase.go
services/user/: BUILD.bazel  main.go
services/user/cmd/: main.go
services/user/cmd/user/: main.go
services/user/controller/: controller.go
services/user/delivery/grpc/: BUILD.bazel  user_handler.go
services/user/delivery/http/: BUILD.bazel  user_handler.go
services/user/docs/: docs.go  swagger.json  swagger.yaml
services/user/handler/: BUILD.bazel  grpc.go  grpc_handler.go  http.go  http_handler.go
services/user/internal/: BUILD.bazel  payload.go  repository.go  usecase.go
services/user/internal/controller/: grpc.go  http.go
services/user/internal/delivery/grpc/: BUILD.bazel  user_handler.go
services/user/internal/delivery/http/: BUILD.bazel  user_handler.go
services/user/internal/repository/: BUILD.bazel  user_repository.go
services/user/internal/usecase/: BUILD.bazel  usecase.go  user_usecase.go
services/user/model/: BUILD.bazel
services/user/repository/: BUILD.bazel  repository.go  user_repository.go
services/user/server/: BUILD.bazel  grpc.go  grpc_handler.go  http.go  http_server.go
services/user/service/: BUILD.bazel  service.go
services/user/usecase/: BUILD.bazel  usecase.go  user_usecase.go
shared/bootstrap/: BUILD.bazel  app.go
shared/config/: BUILD.bazel  config.go
shared/constants/errorcode/: errorcode.go
shared/consul/: BUILD.bazel  consul.go  registry.go
shared/database/: BUILD.bazel  database.go
shared/domain/: BUILD.bazel  auth.go  external_auth.go  session.go  user.go
shared/domain/apperror/: BUILD.bazel  apperror.go
shared/domain/entity/: BUILD.bazel  entity.go
shared/errors/apperror/: BUILD.bazel  apperror.go
shared/errors/grpcerror/: BUILD.bazel  grpcerror.go
shared/errors/httperror/: BUILD.bazel  httperror.go
shared/httperror/: httperror.go
shared/logger/: logger.go
shared/mapper/: BUILD.bazel  mapper.go
shared/middleware/: BUILD.bazel  middleware.go
shared/model/apperror/: BUILD.bazel  apperror.go
shared/model/domain/: BUILD.bazel  domain.go
shared/model/response/: BUILD.bazel  response.go
shared/server/: BUILD.bazel
shared/server/grpcserver/: BUILD.bazel  grpcserver.go
shared/server/httpserver/: BUILD.bazel  httpserver.go
shared/utils/errorutil/: BUILD.bazel  errorutil.go
shared/utils/hashutil/: BUILD.bazel  hashutil.go
shared/utils/jwtutil/: BUILD.bazel  jwtutil.go
shared/utils/passwordutil/: BUILD.bazel  passwordutil.go
shared/utils/pathutil/: pathutil.go
shared/utils/protoutil/: BUILD.bazel  protoutil.go
shared/utils/tokenutil/: BUILD.bazel  tokenutil.go
shared/validation/: validation.go
shared/validator/: BUILD.bazel  validator.go
swagger/: .air.toml  BUILD.bazel  Dockerfile
swagger/cmd/: main.go
swagger/docs/: BUILD.bazel  docs.go  swagger.json  swagger.yaml
traefik/: dynamic.yml  traefik.yml
