"""This module defines the Bazel dependencies and settings for the money-tracker-api project."""

module(
    name = "money-tracker-api",
    version = "0.0.0",
)

bazel_dep(name = "rules_go", version = "0.54.1")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "gazelle", version = "0.43.0")
bazel_dep(name = "protobuf", version = "31.0", repo_name = "com_google_protobuf")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.3")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_caarlos0_env_v11",
    "com_github_charmbracelet_lipgloss",
    "com_github_charmbracelet_log",
    "com_github_gofiber_fiber_v2",
    "com_github_google_uuid",
    "io_gorm_driver_postgres",
    "io_gorm_gorm",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
)
