load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "migration_lib",
    srcs = ["main.go"],
    importpath = "github.com/vasapolrittideah/money-tracker-api/migration",
    visibility = ["//visibility:private"],
    deps = [
        "//shared/config",
        "//shared/database",
        "//shared/domain",
        "@com_github_charmbracelet_log//:log",
        "@com_github_joho_godotenv//:godotenv",
    ],
)

go_binary(
    name = "migration",
    embed = [":migration_lib"],
    visibility = ["//visibility:public"],
)
