load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "swagger_lib",
    srcs = ["main.go"],
    importpath = "github.com/vasapolrittideah/money-tracker-api/swagger",
    visibility = ["//visibility:private"],
    deps = [
        "//swagger/docs",
        "@com_github_charmbracelet_log//:log",
        "@com_github_gofiber_fiber_v2//:fiber",
        "@com_github_gofiber_swagger//:swagger",
    ],
)

go_binary(
    name = "swagger",
    embed = [":swagger_lib"],
    visibility = ["//visibility:public"],
)
