load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "auth_lib",
    srcs = ["main.go"],
    importpath = "github.com/vasapolrittideah/money-tracker-api/services/auth",
    visibility = ["//visibility:private"],
    deps = [
        "//protogen/user/v1:user",
        "//services/auth/internal/delivery/http",
        "//services/auth/internal/delivery/http/middleware",
        "//services/auth/internal/repository",
        "//services/auth/internal/usecase",
        "//shared/bootstrap",
        "//shared/config",
        "//shared/database",
        "//shared/validator",
        "@com_github_gofiber_fiber_v2//:fiber",
    ],
)

go_binary(
    name = "auth",
    embed = [":auth_lib"],
    visibility = ["//visibility:public"],
)
