load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "user_lib",
    srcs = ["main.go"],
    importpath = "github.com/vasapolrittideah/money-tracker-api/services/user",
    visibility = ["//visibility:private"],
    deps = [
        "//protogen/user/v1:user",
        "//services/user/internal/delivery/grpc",
        "//services/user/internal/delivery/http",
        "//services/user/internal/repository",
        "//services/user/internal/usecase",
        "//shared/bootstrap",
        "//shared/config",
        "//shared/database",
        "//shared/validator",
        "@com_github_gofiber_fiber_v2//:fiber",
        "@org_golang_google_grpc//:grpc",
    ],
)

go_binary(
    name = "user",
    embed = [":user_lib"],
    visibility = ["//visibility:public"],
)
