load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "bootstrap",
    srcs = ["app.go"],
    importpath = "github.com/vasapolrittideah/money-tracker-api/shared/bootstrap",
    visibility = ["//visibility:public"],
    deps = [
        "//shared/config",
        "//shared/consul",
        "//shared/database",
        "//shared/server",
        "//shared/server/grpcserver",
        "//shared/server/httpserver",
        "@com_github_charmbracelet_log//:log",
        "@io_gorm_gorm//:gorm",
        "@org_golang_google_grpc//:grpc",
    ],
)
