load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "consul",
    srcs = [
        "consul.go",
        "registry.go",
    ],
    importpath = "github.com/vasapolrittideah/money-tracker-api/shared/consul",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_charmbracelet_log//:log",
        "@com_github_hashicorp_consul_api//:api",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)
