load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "internal",
    srcs = [
        "payload.go",
        "repository.go",
        "usecase.go",
    ],
    importpath = "github.com/vasapolrittideah/money-tracker-api/services/auth/internal",
    visibility = ["//services/auth:__subpackages__"],
    deps = ["//shared/domain"],
)
