load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = ["service.go"],
    importpath = "github.com/vasapolrittideah/money-tracker-api/services/auth/service",
    visibility = ["//visibility:public"],
    deps = [
        "//generated/protobuf/user",
        "//services/auth/model",
        "//shared/config",
        "//shared/domain/apperror",
        "//shared/domain/entity",
        "//shared/logger",
        "//shared/mapper",
        "//shared/utils/jwtutil",
        "//shared/utils/passwordutil",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
