load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "internal",
    srcs = [
        "payload.go",
        "repository.go",
        "usecase.go",
    ],
    importpath = "github.com/vasapolrittideah/money-tracker-api/services/user/internal",
    visibility = ["//services/user:__subpackages__"],
    deps = [
        "//protogen/user/v1:user",
        "//shared/domain",
        "//shared/utils/protoutil",
    ],
)
