load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "repository",
    srcs = ["repository.go"],
    importpath = "github.com/vasapolrittideah/money-tracker-api/services/user/repository",
    visibility = ["//visibility:public"],
    deps = [
        "//shared/model/apperror",
        "//shared/model/domain",
        "//shared/utils/errorutil",
        "@com_github_google_uuid//:uuid",
        "@io_gorm_gorm//:gorm",
    ],
)
