load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "httpserver",
    srcs = ["httpserver.go"],
    importpath = "github.com/vasapolrittideah/money-tracker-api/shared/server/httpserver",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_charmbracelet_log//:log",
        "@com_github_gofiber_fiber_v2//:fiber",
        "@com_github_gofiber_fiber_v2//middleware/cors",
        "@com_github_gofiber_fiber_v2//middleware/recover",
    ],
)
