load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "errorutil",
    srcs = ["errorutil.go"],
    importpath = "github.com/vasapolrittideah/money-tracker-api/shared/utils/errorutil",
    visibility = ["//visibility:public"],
    deps = [
        "//shared/model/apperror",
        "@io_gorm_gorm//:gorm",
        "@org_golang_google_grpc//codes",
    ],
)
