load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "jwtutil",
    srcs = ["jwtutil.go"],
    importpath = "github.com/vasapolrittideah/money-tracker-api/shared/utils/jwtutil",
    visibility = ["//visibility:public"],
    deps = [
        "//shared/model/apperror",
        "@com_github_golang_jwt_jwt_v4//:jwt",
        "@com_github_google_uuid//:uuid",
        "@com_github_matthewhartstonge_argon2//:argon2",
        "@org_golang_google_grpc//codes",
    ],
)
