load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "protoutil",
    srcs = ["protoutil.go"],
    importpath = "github.com/vasapolrittideah/money-tracker-api/shared/utils/protoutil",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_google_protobuf//types/known/wrapperspb"],
)
