load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "http",
    srcs = [
        "auth_handler.go",
        "oauth_google_handler.go",
    ],
    importpath = "github.com/vasapolrittideah/money-tracker-api/services/auth/delivery/http",
    visibility = ["//services/auth:__subpackages__"],
    deps = [
        "//shared/config",
        "//shared/domain",
        "//shared/errors/apperror",
        "//shared/errors/httperror",
        "//shared/validator",
        "@com_github_gofiber_fiber_v2//:fiber",
    ],
)
