load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "repository",
    srcs = ["user_repository.go"],
    importpath = "github.com/vasapolrittideah/money-tracker-api/services/user/internal/repository",
    visibility = ["//services/user:__subpackages__"],
    deps = [
        "//services/user/internal",
        "//shared/domain",
        "@io_gorm_gorm//:gorm",
    ],
)
