load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "usecase",
    srcs = ["user_usecase.go"],
    importpath = "github.com/vasapolrittideah/money-tracker-api/services/user/internal/usecase",
    visibility = ["//services/user:__subpackages__"],
    deps = [
        "//services/user/internal",
        "//shared/config",
        "//shared/domain",
        "//shared/errors/apperror",
        "//shared/utils/hashutil",
        "@io_gorm_gorm//:gorm",
    ],
)
